--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -5,7 +5,7 @@
 html,
 body,
 #app {
-  height: 100%;
+  // 
   color: #333333;
   font-family: Arial, Helvetica, 'STHeiti STXihei', 'Microsoft YaHei', Tohoma, sans-serif;
   background-color: $background-color;
