--- a/src/assets/style/reset.scss
+++ b/src/assets/style/reset.scss
@@ -89,6 +89,7 @@ input {
 	font-size: 100%;
 	font-weight: normal;
 	vertical-align: baseline;
+	box-sizing: border-box;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -161,7 +162,7 @@ li {
 html,
 body {
 	width: 100%;
-	height: 100%;
+	
 }
 
 body {
