--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -9,6 +9,8 @@ body,
   color: #333333;
   font-family: Arial, Helvetica, 'STHeiti STXihei', 'Microsoft YaHei', Tohoma, sans-serif;
   background-color: $background-color;
+  min-height: 100%;
+  font-size: 16px;
 }
 
 .app-container {
