--- a/src/assets/style/mixin.scss
+++ b/src/assets/style/mixin.scss
@@ -34,3 +34,24 @@
   flex-wrap: $fw;
   -webkit-flex-wrap: $fw;
 }
+
+.flex {
+  display: flex;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.items-center {
+  align-items: center;
+}
+
